<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/nfc_state"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:text="@string/nfc_is_openning"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/nfc_test_tip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:text="@string/nfc_test_tip"
            android:visibility="gone"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/nfc_test_result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:text="@string/nfc_test_result"
            android:textColor="#ff0000ff"
            android:textSize="20sp"
            android:visibility="gone" />

        <TextView
            android:id="@+id/nfc_test_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:text="@string/nfc_test_time"
            android:textSize="20sp"
            android:visibility="gone" />

        <TextView
            android:id="@+id/nfc_tag_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:text="@string/nfc_tag_id"
            android:textSize="20sp"
            android:visibility="gone" />

        <TextView
            android:id="@+id/nfc_tag_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:text="@string/nfc_tag_type"
            android:textSize="20sp"
            android:visibility="gone" />

        <TextView
            android:id="@+id/nfc_tag_sectors"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:text="@string/nfc_tag_sectors"
            android:textSize="20sp"
            android:visibility="gone" />

        <TextView
            android:id="@+id/nfc_tag_blocks"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:text="@string/nfc_tag_blocks"
            android:textSize="20sp"
            android:visibility="gone" />

        <TextView
            android:id="@+id/nfc_tag_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:text="@string/nfc_tag_size"
            android:textSize="20sp"
            android:visibility="gone" />
    </LinearLayout>

    <Button
        android:id="@+id/nfc_btn_sucess"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:text="@string/Success"
        android:textSize="30sp" />

    <Button
        android:id="@+id/nfc_btn_failed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/Failed"
        android:textSize="30sp" />

</LinearLayout>