<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        android:id="@+id/LinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:text="@string/LCD_increase"
            android:id="@+id/Display_lcd_on"
            android:layout_width="wrap_content"
            android:layout_height="100dip"
            android:layout_weight="0.5" />
        <Button
            android:text="@string/LCD_weaken"
            android:id="@+id/Display_lcd_off"
            android:layout_width="wrap_content"
            android:layout_height="100dip"
            android:layout_weight="0.5" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <Button
            android:id="@+id/display_bt_ok"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.8"
            android:textSize="25dip"
            android:text="@string/Success" />
        <Button
            android:id="@+id/display_bt_failed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            android:textSize="25dip"
            android:text="@string/Failed" />
    </LinearLayout>
</LinearLayout>