<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
   <TextView
    android:textSize="20dip"
    android:text="@string/hall_test"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"/>
 <TextView
    android:id="@+id/hall_status"
    android:textSize="40dip"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"/>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
 <Button
    android:id="@+id/hall_bt_ok"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:textSize="30dip"
    android:layout_weight="0.7"
    android:text="@string/Success" />
<Button
    android:id="@+id/hall_bt_failed"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:textSize="30dip"
    android:layout_weight="0.3"
    android:text="@string/Failed" />
</LinearLayout>
</LinearLayout>

