<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/psensor_background">
    <TextView
        android:id="@+id/proximity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20dip"
        android:layout_marginTop="30dip"
        android:layout_marginLeft="20dip"
        android:layout_marginRight="20dip"
        android:text="@string/proximity"
        android:textColor="#000000" />
    <TextView
        android:id="@+id/tips"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tips"
        android:textColor="@color/Blue"
        android:layout_marginTop="15dip"
        android:layout_marginLeft="20dip"
        android:layout_marginRight="20dip"
        android:textSize="15dip" />
    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <Button
        android:id="@+id/psensor_bt_ok"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dip"
        android:layout_marginRight="10dip"
        android:layout_weight="0.8"
        android:textSize="25dip"
        android:textColor="#000000"
        android:text="@string/Success" />
    <Button
        android:id="@+id/psensor_bt_failed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dip"
        android:layout_marginRight="10dip"
        android:layout_weight="0.2"
        android:textSize="25dip"
        android:textColor="#000000"
        android:text="@string/Failed" />
</LinearLayout>
</LinearLayout>
