<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/sdcardformat_start"
        android:text="@string/sdcardformat"
        android:textColor="@color/Blue"
        android:textSize="22dip" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <Button
            android:id="@+id/sdcardformat_bt_ok"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.8"
            android:textSize="25dip"
            android:text="@string/Success" />
        <Button
            android:id="@+id/sdcardformat_bt_failed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            android:textSize="25dip"
            android:text="@string/Failed" />
    </LinearLayout>
</LinearLayout>