<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        android:id="@+id/rg_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">
        <RadioGroup
            android:id="@+id/group"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/mic1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Mic_one"
            android:layout_weight="1"
            android:paddingLeft="5dp"
            android:textSize="20dip" />

        <RadioButton
            android:id="@+id/mic2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Mic_two"
            android:paddingLeft="5dp"
            android:textSize="20dip" />
        </RadioGroup>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">
        <Button
            android:id="@+id/mic_bt_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:textSize="20dip"
            android:text="@string/Mic_start" />
    </LinearLayout>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">
        <com.mediatek.factorymode.VUMeter
            android:id="@+id/uvMeter"
            android:layout_width="150px"
            android:layout_height="60px"
            android:layout_centerInParent="true" />
    </RelativeLayout>
    <TextView
        android:id="@+id/mic_tips"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Mic_operation"
        android:textSize="20dip"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/Green" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/mic_bt_ok"
            android:layout_width="match_parent"
            android:layout_height="120dip"
            android:layout_weight="0.5"
            android:textSize="25dip"
            android:text="@string/Success" />
        <Button
            android:id="@+id/mic_bt_failed"
            android:layout_width="match_parent"
            android:layout_height="120dip"
            android:layout_weight="0.5"
            android:textSize="25dip"
            android:text="@string/Failed" />
    </LinearLayout>
    <TextView
        android:id="@+id/mic_tips"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Speaker_operation"
        android:textSize="20dip"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/Green" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/speaker_bt_ok"
            android:layout_width="match_parent"
            android:layout_height="120dip"
            android:layout_weight="0.5"
            android:textSize="25dip"
            android:text="@string/Success" />
        <Button
            android:id="@+id/speaker_bt_failed"
            android:layout_width="match_parent"
            android:layout_height="120dip"
            android:layout_weight="0.5"
            android:textSize="25dip"
            android:text="@string/Failed" />
    </LinearLayout>
</LinearLayout>
