<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_weight="2"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/fuelgauge_status" />

            <TextView
                android:id="@+id/fuelgauge_status"
                android:layout_width="wrap_content"
                android:textSize="20sp"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/fuelgauge_model_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/fuelgauge_model" />

            <TextView
                android:id="@+id/fuelgauge_model"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/fuelgauge_capacity_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/fuelgauge_capacity" />

            <TextView
                android:id="@+id/fuelgauge_capacity"
                android:layout_width="wrap_content"
                android:textSize="20sp"
                android:layout_height="wrap_content" />
        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/fuelgauge_bt_ok"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_weight="5"
        android:textSize="30sp"
        android:text="@string/Success" />

    <Button
        android:id="@+id/fuelgauge_bt_failed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_weight="4"
        android:textSize="30sp"
        android:text="@string/Failed" />

</LinearLayout>
